--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /KEYPRACT/.vs/KEYPRACT/FileContentIndex/3d825f9d-422d-4035-8914-dcdac94a6eab.vsidx
+/KEYPRACT/.vs/KEYPRACT/FileContentIndex/9185d90f-be93-47dd-b6ec-21b61d94577d.vsidx
+/KEYPRACT/.vs/KEYPRACT/FileContentIndex/a88502f7-94ec-4881-93f6-7fc84b2809e4.vsidx
